Update drizzle.config.ts and package.json for improved database command handling
- Removed trailing spaces in drizzle.config.ts for consistency.
- Updated package.json to include a force option for the `db:push` command and added trailing spaces to other database commands for uniformity.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:up": "drizzle-kit up",
-    "db:generate": "drizzle-kit generate",
-    "db:studio": "drizzle-kit studio",
-    "db:push": "drizzle-kit push"
+    "db:up": "drizzle-kit up ",
+    "db:generate": "drizzle-kit generate ",
+    "db:studio": "drizzle-kit studio ",
+    "db:push": "drizzle-kit push --force"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
