Update localization to Ukrainian across various files
- Translated comments and documentation in Docker-related files, including .dockerignore, Dockerfile, and docker-compose configurations, to enhance clarity for Ukrainian-speaking developers.
- Updated initialization SQL script and API routes to reflect the new localization, ensuring consistent language usage throughout the application.
- Improved user experience by providing localized feedback in the application setup and deployment instructions.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,4 @@
-# Зависимости
+# Залежності
 node_modules
 npm-debug.log*
 yarn-debug.log*
@@ -6,7 +6,7 @@ yarn-error.log*
 pnpm-debug.log*
 .pnpm-debug.log*
 
-# Локальные переменные среды
+# Локальні змінні середовища
 .env
 .env*.local
 .env.local
@@ -91,4 +91,3 @@ README.md
 
 # Prisma
 .env
-prisma/migrations/
