--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,5 @@
 services:
-  # PostgreSQL база данных для разработки
+  # PostgreSQL база даних для розробки
   postgres-dev:
     image: postgres:15-alpine
     container_name: github-crm-db-dev
