Refactor environment configuration and enhance project structure
- Updated `.env` and `env.example` files to standardize database and authentication settings.
- Removed deprecated `docker-deploy.md` and `RAILWAY_DEPLOYMENT.md` files to streamline documentation.
- Refactored Dockerfile and docker-compose.yml for improved clarity and organization.
- Introduced new model classes for user and project management, enhancing code maintainability.
- Updated API routes to utilize new model classes and improved error handling.
- Added new components for loading spinners and project addition, enhancing user experience.
- Adjusted NextAuth configuration for better authentication flow.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-  # PostgreSQL база даних
   postgres:
     image: postgres:15-alpine
     container_name: github-crm-db
@@ -22,7 +21,8 @@ services:
       timeout: 5s
       retries: 5
 
-  # # Next.js додаток
+# Розкоментуйте цей блок, якщо хочете запустити додаток в Dockerб але краще запустити його локально
+
   # app:
   #   build:
   #     context: .
@@ -42,6 +42,7 @@ services:
   #       condition: service_healthy
   #   networks:
   #     - github-crm-network
+
 
 volumes:
   postgres_data:
