--- a/env.example
+++ b/env.example
@@ -1,13 +1,15 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/github_crm"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/github_crm"
+DATABASE_HOST="localhost"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="postgres"
+DATABASE_NAME="github_crm"
+DATABASE_PORT="5432"
+DATABASE_SSL="false"
 
-# NextAuth
+
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-secret-key-here-generate-a-random-string"
+NEXTAUTH_SECRET="CXSDH+H4t5QyhjZ1f34nMZ/PbB/gu4arEUR7afrR6cA="
 
-# GitHub OAuth (for automatic token generation)
-GITHUB_ID="your_github_oauth_app_client_id"
-GITHUB_SECRET="your_github_oauth_app_client_secret"
-
-# GitHub API Token (fallback for non-OAuth users)
-GITHUB_TOKEN="ghp_your_github_personal_access_token_here" 
+# GitHub OAuth that connects with app from app settings page
+GITHUB_ID="Ov23liz3FmUCbPAe3yge"
+GITHUB_SECRET="cc300d595a13d60feb138ec981715fe6127debcb"
