Refactor authentication and update dependencies
- Updated `auth.ts` to improve type handling for session and token management.
- Removed deprecated `next-auth.d.ts` type definitions to streamline type management.
- Adjusted linting commands in `package.json` for better clarity.
- Cleaned up `bun.lock` by removing unused ESLint dependencies and updating others for consistency.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "biome check --write {app,components,lib,types}",
-        "lint:fix": "biome check  --fix {app,components,lib,types}",
+        "lint": "biome check --write {app,components,lib}",
+        "lint:fix": "biome check  --fix {app,components,lib}",
         "db:up": "drizzle-kit up",
         "db:generate": "drizzle-kit generate",
         "db:studio": "drizzle-kit studio",
