--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "biome check --write {app,components,lib}",
+        "lint": "biome check  {app,components,lib}",
         "lint:fix": "biome check  --fix {app,components,lib}",
         "db:up": "drizzle-kit up",
         "db:generate": "drizzle-kit generate",
