--- a/package.json
+++ b/package.json
@@ -14,20 +14,30 @@
         "db:push": "drizzle-kit push --force"
     },
     "dependencies": {
-        "@hookform/resolvers": "^3.3.2",
+        "@hookform/resolvers": "^5.1.1",
+        "@radix-ui/react-alert-dialog": "^1.1.14",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-toast": "^1.2.14",
         "bcryptjs": "^2.4.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "date-fns": "^3.0.6",
         "drizzle-kit": "^0.31.1",
         "drizzle-orm": "^0.44.2",
-        "lucide-react": "^0.303.0",
+        "lucide-react": "^0.515.0",
         "next": "^15.1.6",
         "next-auth": "^4.24.5",
+        "next-themes": "^0.4.6",
         "postgres": "^3.4.3",
         "react": "^18",
         "react-dom": "^18",
-        "react-hook-form": "^7.48.2",
+        "react-hook-form": "^7.58.0",
         "react-hot-toast": "^2.4.1",
-        "zod": "^3.22.4"
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.25.64"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
