--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "drizzle-kit": "^0.31.1",
         "drizzle-orm": "^0.44.2",
         "lucide-react": "^0.515.0",
+        "motion": "^12.18.1",
         "next": "^15.1.6",
         "next-auth": "^4.24.5",
         "next-themes": "^0.4.6",
